# epoch

./: .gitmodules
.github/workflows/: build_test.yml
Gpulse2.5/: CLAUDE.md  CMakeLists.txt
Gpulse2.5/include/: Gpulse.h  constants.h
Gpulse2.5/src/: Gpulse.cpp  constants.cpp
Gpulse2.5/tests/: test_gpulse.cpp
Gpulse2.5/tools/: export_field.cpp  export_temporal.cpp  plot_field.py  plot_temporal.py
epoch1d/: Makefile
epoch1d/src/: boundary.F90  constants.F90  epoch1d.F90  particles.F90  shared_data.F90
epoch1d/src/deck/: deck_hy_laser_block.F90  deck_hybrid_block.F90  deck_io_block.F90  deck_qed_block.F90  deck_solid_block.F90
epoch1d/src/housekeeping/: balance.F90  partlist.F90  setup.F90
epoch1d/src/hybrid/: hy_fields.F90  hy_heating.F90  hy_ionisation_loss.F90  hy_laser.F90  hy_resistivity.F90  hybrid.F90
epoch1d/src/io/: diagnostics.F90  iterators.F90
epoch1d/src/physics_packages/: bremsstrahlung.F90  photons.F90
epoch2d/: Makefile
epoch2d/src/: boundary.F90  constants.F90  epoch2d.F90  particles.F90  shared_data.F90
epoch2d/src/deck/: deck.F90  deck_hy_laser_block.F90  deck_hybrid_block.F90  deck_io_block.F90  deck_qed_block.F90  deck_solid_block.F90
epoch2d/src/housekeeping/: balance.F90  partlist.F90  setup.F90
epoch2d/src/hybrid/: hy_fields.F90  hy_heating.F90  hy_ionisation_loss.F90  hy_laser.F90  hy_resistivity.F90  hybrid.F90
epoch2d/src/io/: diagnostics.F90  iterators.F90
epoch2d/src/physics_packages/: bremsstrahlung.F90  photons.F90
epoch3d/: Makefile
epoch3d/src/: boundary.F90  constants.F90  epoch3d.F90  particles.F90  shared_data.F90
epoch3d/src/deck/: deck.F90  deck_hy_laser_block.F90  deck_hybrid_block.F90  deck_io_block.F90  deck_qed_block.F90  deck_solid_block.F90
epoch3d/src/housekeeping/: balance.F90  partlist.F90  setup.F90  welcome.F90
epoch3d/src/hybrid/: hy_fields.F90  hy_heating.F90  hy_ionisation_loss.F90  hy_laser.F90  hybrid.F90  (+1 more)
(+4 files in other folders)
